--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
         "astro": "^5.13.2",
+        "dotenv": "^17.2.2",
+        "drizzle-orm": "^0.44.5",
         "moment": "^2.30.1",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "tailwindcss": "^4.1.12"
     },
     "devDependencies": {
+        "drizzle-kit": "^0.31.5",
+        "tsx": "^4.20.6",
         "typescript": "^5.9.2"
     }
 }
