--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
         "astro": "^5.13.2",
+        "better-sqlite3": "^12.4.1",
         "dotenv": "^17.2.2",
         "drizzle-orm": "^0.44.5",
         "moment": "^2.30.1",
@@ -23,6 +24,7 @@
         "tailwindcss": "^4.1.12"
     },
     "devDependencies": {
+        "@types/better-sqlite3": "^7.6.13",
         "drizzle-kit": "^0.31.5",
         "tsx": "^4.20.6",
         "typescript": "^5.9.2"
