--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "astro dev",
         "build": "astro build",
         "preview": "astro preview",
-        "astro": "astro"
+        "astro": "astro",
+        "db:seed": "tsx src/db/seed.ts"
     },
     "dependencies": {
         "@astrojs/node": "^9.4.2",
