--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@astrojs/node": "^9.4.2",
         "@astrojs/react": "^4.3.0",
         "@tailwindcss/vite": "^4.1.12",
+        "@tanstack/react-query": "^5.90.2",
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
         "astro": "^5.13.2",
