--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@astrojs/node": "^9.4.2",
         "@astrojs/react": "^4.3.0",
+        "@hookform/resolvers": "^5.2.2",
         "@tailwindcss/vite": "^4.1.12",
         "@tanstack/react-query": "^5.90.2",
         "@types/react": "^19.1.10",
@@ -23,6 +24,7 @@
         "moment": "^2.30.1",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
+        "react-hook-form": "^7.65.0",
         "tailwindcss": "^4.1.12",
         "zod": "^3.25.76"
     },
